Fixed the separate vertical scrollbar was shown on md-sidenav-content

--- a/src/app/components/docs/docs.component.css
+++ b/src/app/components/docs/docs.component.css
@@ -46,7 +46,8 @@ a:hover{
     text-decoration: none;
 }
 md-sidenav-layout{
-    height: 100vh;
+    /*height: 100vh;*/
+    height: 100%;
 }
 
 md-sidenav{
